# tinkerspark

./: .gitguardian.yml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.agents/plugins/: marketplace.json
crates/app-desktop/: Cargo.toml
crates/app-desktop/src/: app.rs  diff_pane.rs  hex_pane.rs  main.rs  panes.rs  state.rs
crates/core-analyze/: Cargo.toml
crates/core-analyze/src/: error.rs  lib.rs  model.rs  registry.rs  traits.rs
crates/core-bytes/: Cargo.toml
crates/core-bytes/src/: error.rs  kind_sniff.rs  lib.rs  source.rs
crates/core-diff/: Cargo.toml
crates/core-diff/src/: diff.rs  error.rs  lib.rs  navigate.rs
crates/core-diff/tests/: fixture_tests.rs
crates/core-hexview/: Cargo.toml
crates/core-hexview/src/: lib.rs  search.rs  selection.rs  viewport.rs
crates/core-patch/: Cargo.toml
crates/core-patch/src/: error.rs  history.rs  lib.rs  patch.rs  patched_view.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: byte_range.rs  diagnostic.rs  file_handle.rs  ids.rs  kind.rs  lib.rs
crates/format-age/: Cargo.toml
crates/format-age/src/: lib.rs
crates/format-custom/: Cargo.toml
crates/format-custom/src/: format_custom.rs  parser.rs  template.rs
crates/format-generic/: Cargo.toml
crates/format-generic/src/: chunks.rs  confidence.rs  entropy.rs  lib.rs  magic.rs  strings.rs  tlv.rs
crates/format-generic/tests/: integration_tests.rs
crates/format-jwk/: Cargo.toml
crates/format-jwk/src/: json_span.rs  lib.rs
crates/format-openpgp/: Cargo.toml
crates/format-openpgp/src/: boundary.rs  fields.rs  lib.rs
crates/format-openpgp/tests/: analyzer_tests.rs
crates/format-ssh/: Cargo.toml
crates/format-ssh/src/: binary.rs  lib.rs
crates/format-ssh/tests/: ssh_tests.rs
crates/format-x509/: Cargo.toml
crates/format-x509/src/: der_spans.rs  lib.rs  pem_decode.rs  tree_builder.rs
crates/format-x509/tests/: cert_tests.rs
crates/infra-io/: Cargo.toml
crates/infra-io/src/: lib.rs  save.rs
crates/infra-session/: Cargo.toml
crates/infra-session/src/: lib.rs
docs/: architecture.md  custom-templates.md  product.md  roadmap.md
plugins/tinkerspark-skills/.codex-plugin/: plugin.json
plugins/tinkerspark-skills/skills/principal-code-review/: SKILL.md
plugins/tinkerspark-skills/skills/principal-code-review/agents/: openai.yaml
testdata/: sample-text.txt
testdata/age/: encrypted.age  identity.txt
testdata/diff/: README.md
testdata/jwk/: rsa-public.jwk
testdata/large/: README.md
testdata/malformed/: README.md
testdata/openpgp/: README.md  multi-packet-armored.asc  sample-armored.asc
testdata/ssh/: authorized_keys  id_ecdsa_unencrypted  id_ecdsa_unencrypted.pub  id_ed25519.pub  id_ed25519_encrypted  id_ed25519_encrypted.pub  id_ed25519_unencrypted  id_ed25519_unencrypted.pub  id_rsa_unencrypted  id_rsa_unencrypted.pub  known_hosts  truncated_key.pem
testdata/x509/: crl.der  crl.pem  csr-multi.der  csr-multi.pem  csr.der  csr.pem  self-signed.der  self-signed.pem
