[workspace]
resolver = "2"
members = [
    "crates/app-desktop",
    "crates/core-types",
    "crates/core-bytes",
    "crates/core-hexview",
    "crates/core-patch",
    "crates/core-diff",
    "crates/core-analyze",
    "crates/format-openpgp",
    "crates/format-generic",
    "crates/format-x509",
    "crates/format-ssh",
    "crates/format-age",
    "crates/format-jwk",
    "crates/format-custom",
    "crates/infra-io",
    "crates/infra-session",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Internal crates
tinkerspark-core-types = { path = "crates/core-types" }
tinkerspark-core-bytes = { path = "crates/core-bytes" }
tinkerspark-core-hexview = { path = "crates/core-hexview" }
tinkerspark-core-patch = { path = "crates/core-patch" }
tinkerspark-core-diff = { path = "crates/core-diff" }
tinkerspark-core-analyze = { path = "crates/core-analyze" }
tinkerspark-format-openpgp = { path = "crates/format-openpgp" }
tinkerspark-format-generic = { path = "crates/format-generic" }
tinkerspark-format-x509 = { path = "crates/format-x509" }
tinkerspark-format-ssh = { path = "crates/format-ssh" }
tinkerspark-format-age = { path = "crates/format-age" }
tinkerspark-format-jwk = { path = "crates/format-jwk" }
tinkerspark-format-custom = { path = "crates/format-custom" }
tinkerspark-infra-io = { path = "crates/infra-io" }
tinkerspark-infra-session = { path = "crates/infra-session" }

# External dependencies
eframe = "0.31"
egui = "0.31"
egui_dock = { version = "0.16", features = ["serde"] }
memmap2 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
x509-parser = { version = "0.16", default-features = false }
ssh-key = { version = "0.6", default-features = false, features = ["std"] }
base64 = "0.22"
