[package]
name = "tinkerspark-core-bytes"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tinkerspark-core-types = { workspace = true }
memmap2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
