[package]
name = "tinkerspark-core-diff"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tinkerspark-core-types = { workspace = true }
tinkerspark-core-bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tinkerspark-core-bytes = { workspace = true }
