[package]
name = "tinkerspark-format-jwk"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tinkerspark-core-types = { workspace = true }
tinkerspark-core-bytes = { workspace = true }
tinkerspark-core-analyze = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
