[package]
name = "tinkerspark-format-x509"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tinkerspark-core-types = { workspace = true }
tinkerspark-core-bytes = { workspace = true }
tinkerspark-core-analyze = { workspace = true }
x509-parser = { workspace = true }
tracing = { workspace = true }
